<?xml version="1.0" encoding="utf-8"?><!-- UI to control video playback. See the class's javadoc for more info. -->
<com.akobuije.virtualrealitylab.VideoUiView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_ui_view"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@android:color/transparent"
    android:orientation="horizontal"
    android:theme="@style/FullscreenTheme">

    <ImageButton
        android:id="@+id/play_pause_toggle"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="@android:drawable/ic_media_pause"
        android:contentDescription="@string/pause_label"
        android:tooltipText="@string/pause_label"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:tooltipText="@string/seeker_bar"
        style="?android:attr/progressBarStyleHorizontal"/>

    <TextView
        android:id="@+id/status_text"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:gravity="center|end"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="..."
        android:textAlignment="textEnd"
        android:textColor="#fff"
        android:textSize="12dp" />

    <ImageButton
        android:id="@+id/enter_exit_vr"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="@drawable/enter_vr"
        android:contentDescription="@string/enter_vr_label"
        android:tooltipText="@string/enter_vr_label"/>

</com.akobuije.virtualrealitylab.VideoUiView>
